# chip8-emu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: chip8_core_bg-CoHZxNVF.wasm  index--a12GCei.js  index-BYuSVPQI.css
chip8-core/: Cargo.toml
chip8-core/src/: lib.rs  main.rs  processor.rs
public/: CNAME
src/: App.tsx  index.css  lib.rs  processor.rs  utils.ts
src/components/app/: Canvas.tsx  Chip8Playground.tsx  Controls.tsx  CpuStatus.tsx  ExecutedInstructions.tsx  GameInfo.tsx  GameLibrary.tsx  GameUpload.tsx  KeyboardMapping.tsx
src/components/layouts/: AppLayout.tsx  PlaygroundLayout.tsx
src/components/shared/: Chip8Playground.tsx  Footer.tsx  Header.tsx
src/components/ui/: ArrowUpIcon.tsx  Card.tsx  CardContent.tsx  List.tsx  ListItem.tsx  Separator.tsx
src/constants/: availableGames.tsx  colorClass.ts  gameItems.ts  keyMappings.ts  navItems.ts  pixelColors.ts
src/hooks/: useCanvasSizing.ts  useChip8.ts  useChip8Controller.ts  useKeyboardInput.ts
