[package]
name = "chip8-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.1"
sdl2 = "0.37.0"
